# experiment-fft-in-the-browser

./: Dockerfile  README.md  build-deploy.sh  build-run.sh  build.sh  react-work.sh  share.Dockerfile  wasm-work.sh
fft-in-the-browser/: package-lock.json  package.json
fft-in-the-browser/public/: index.html
fft-in-the-browser/src/: AnalysisComponent.tsx  App.css  App.tsx  PixiComponent.tsx  models.tsx
proofs/: README.md
proofs/display/: run.sh
proofs/display/test-wasm/: index.html  pixi.js  shim.js
proofs/display/test-wasm/src/: lib.rs
proofs/fft/fftplay/: Cargo.toml  plot.py  specs.csv
proofs/fft/fftplay/src/: main.rs
proofs/seam/: build.sh  work.sh
proofs/seam/test-wasm/: Cargo.toml  index.html
proofs/seam/test-wasm/src/: lib.rs
wasm-fft/: Cargo.toml
wasm-fft/src/: lib.rs
