[package]
name = "wasm-fft"
version = "0.1.0"
authors = ["U.G. Wilson <ugwilson@gmail.com>"]
description = "Test making FFT available as WebAssembly."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rustfft = "6.1.0"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false